# python-playwright-boilerplate

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.template  pyproject.toml
src/: allure_send_results.py  settings.py
src/models/: user.py
src/pages/: __init__.py  base.py  inventory.py  login.py
src/pages/elements/: elements.py
src/tests/: conftest.py  test_login.py
