[tool.poetry]
name = "python-playwright-boilerplate"
version = "0.1.0"
description = ""
authors = ["Pompeiro <pompeiro10@wp.pl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_playwright_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.33.0"
pytest-playwright = "^0.3.3"
pytest = "^7.3.1"
pytest-xdist = "^3.3.0"
pydantic = "^1.10.7"
allure-pytest = "^2.13.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict_optional = false
explicit_package_bases = true
ignore_missing_imports = true

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "PL", # pylint
    "RUF", # ruff
    "T10", # flake8-debugger (T10)
    "T20", # flake8-print (T20)
]
ignore = [
    "E501",  # line too long, handled by black
]
line-length = 88
